--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@ rel="stylesheet">
       <a href="index.html">Home</a>
       <a href="aboutme.html">About Me</a>
       <a href="featurepage.html">Feature Page</a>
-      <a href="projectspage.html">Projects</a>
+      <a href="projects.html">Projects</a>
     </div>
     <div id="about-content">
       <div class="my-picture">
