--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ rel="stylesheet">
       <a href="index.html">Home</a>
       <a href="aboutme.html">About Me</a>
       <a href="featurepage.html">Feature Page</a>
-      <a href="projectspage.html">Projects</a>
+      <a href="projects.html">Projects</a>
     </div>
     <div class="project-container">
       <span><a href="https://scratch.mit.edu/projects/175337413/#editor" target="_blank">This project is me making a shape that looks like a special kind of star. Some challenges I faced while comleting this project includes, trying to find the steps and degrees the sprite aka the cat takes.</a></span>
